# openbmc-chif-svc

./: CMakeLists.txt  README.md  meson.build
include/: DataExtract.h  cfg_smbios.hpp  chif.h  chif.hpp  db_smbios.hpp  ev.hpp  eventlog.h  generic_decoder.h  gpio.h  i2c_mapping.hpp  i2c_return_codes.hpp  i2c_topology.hpp  iodnetcfg.h  logs.h  misc.hpp  platdef.h  platdef_api.hpp  romchf_msg.hpp  romchfservice.hpp  smbios.hpp  smif.hpp  strutil.hpp  sysrom.hpp  triton.hpp  uefi.hpp  uefi_file_def.h  uefi_util.hpp  uuid_gen.hpp
service_files/: xyz.openbmc_project.GxpChif.service
src/: DataExtract.c  cfg_smbios.cpp  db_smbios.cpp  dbus_send.cpp  ev.cpp  generic_decoder.cpp  i2c_mapping.cpp  i2c_topology.cpp  main.c  main.cpp  misc.cpp  platdef_api.cpp  romchfservice.cpp  smbios.cpp  smif.cpp  strutil.cpp  sysrom.cpp  triton.cpp  uefi_util.cpp  uuid_gen.cpp
subprojects/: libsystemd.wrap  phosphor-dbus-interfaces.wrap  sdbusplus.wrap
